spacing fixes

--- a/ckanext/nhs/fanstatic/sass/theme/_home.scss
+++ b/ckanext/nhs/fanstatic/sass/theme/_home.scss
@@ -11,6 +11,7 @@
 
 		.search-input {
 			width:80%;
+			margin-bottom:10px;
 		}
 	}
 
@@ -22,7 +23,7 @@
 		background-color: $primaryColor;
 		padding: 30px 30px;
 		margin-top:-130px;
-		margin-bottom: 60px;
+		margin-bottom: 75px;
 		
 		@media only screen and (max-width: 767px) {
 			padding: 15px 20px;
